--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,14 @@
     background-color: #676767;
 }
 
+.bg-color-three-reasons {
+    background-color: #fff;
+}
+
+.bg-color-personnal-info {
+    background-color: #f4f4f4;
+}
+
 .ui-menu-color-home {
     background-color: #e67e22;
 }
@@ -36,6 +44,23 @@ h1, h2, h3, h4 {
 
 .inline-block {
     display: inline-block;
+}
+
+.row-table {
+    display: table;
+}
+
+.section-column {
+    display: table-cell;
+    padding: 0 30px 30px;
+    float: none;
+}
+
+.section-heading {
+    font-family: "Exo", sans-serif;
+    font-weight: 300;
+    margin-top: 25px;
+    margin-bottom: 40px;
 }
 
 header {
@@ -176,4 +201,46 @@ footer {
 
 #footer-details {
     padding: 20px;
+}
+
+.three-reasons-icon {
+    font-size: 26px;
+    color: #e67e22;
+}
+
+.three-reasons.heading {
+    margin-bottom: 15px;
+}
+
+.personnal-info-item {
+    margin-bottom: 20px;
+    display: block;
+    clear: both;
+}
+
+.personnal-info-item .key,
+.personnal-info-item .value {
+    padding-right: 8px;
+    display: inline-block;
+}
+
+.personnal-info-item .key p,
+.personnal-info-item .value p {
+    margin: 0;
+}
+
+.personnal-info-item .key {
+    width: 30%;
+    margin-right: 21px;
+    padding-top: 2px;
+    vertical-align: top;
+}
+
+.personnal-info-item .key p {
+    font-weight: 700;
+}
+
+.personnal-info-item .value {
+    width: 60%;
+    position: relative;
 }
