--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,6 +36,14 @@
     background-color: #525252;
 }
 
+.ui-menu-color-github {
+    background-color: #1c4a6c;
+}
+
+.ui-menu-color-interests {
+    background-color: #e74c3c;
+}
+
 h1, h2, h3, h4 {
     margin: 0;
 }
